--- a/trees/styles.css
+++ b/trees/styles.css
@@ -58,3 +58,38 @@ html, body {
 .navbar_item:visited svg {
     fill:  #0f0f;
 }
+
+#page_content {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#controls {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+#controls button {
+    all: unset;
+    font-size: x-large;
+    padding: 10px;
+    color: #0f0;
+    border: 2px solid #fff;
+    border-radius: 15px;
+    background: #333;
+}
+
+#set_name {
+    font-size: x-large;
+    padding: 10px;
+    color: #0f0;
+    border: 2px solid #fff;
+    border-radius: 15px;
+    background: #333;
+}
