--- a/spells/styles.css
+++ b/spells/styles.css
@@ -1,72 +1,3 @@
-html, body {
-    display: flex;
-    flex-direction: column;
-    background: #151515;
-    padding: 0;
-    margin: 0;
-}
-
-#page_title {
-    background-color: #666;
-    color: #fff;
-    padding: 3px;
-    font-weight: bold;
-    font-style: italic;
-    text-align: center;
-    font-size: xx-large;
-}
-
-#navbar {
-    display: flex;
-    justify-content: space-evenly;
-    background: #333;
-    padding: 5px;
-    margin: 5px;
-    border-radius: 10px;
-}
-
-.navbar_item {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    gap: 2px;
-    background: #666;
-    border: 2px solid;
-    border-radius: 10px;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.navbar_item svg {
-    width: auto;
-    height: 15px;
-}
-
-.navbar_item:link {
-    color: #fff;
-}
-
-.navbar_item:link svg {
-    fill:  #fff;
-}
-
-.navbar_item:visited {
-    color: #0f0;
-}
-
-.navbar_item:visited svg {
-    fill:  #0f0f;
-}
-
-#page_content {
-    display: flex;
-    gap: 10px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 #controls {
     display: flex;
     gap: 10px;
@@ -92,4 +23,9 @@ html, body {
     border: 2px solid #fff;
     border-radius: 15px;
     background: #333;
+}
+
+#canvas {
+    max-width: 100%;
+    margin: 10px;
 }
