--- a/units/styles.css
+++ b/units/styles.css
@@ -22,14 +22,12 @@
 .unit_wrapper .line {
     padding: 0;
     height: 0;
-    transition: all 0.5s ease-in-out;
-    transition-delay: 1s;
+    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.unit_wrapper:hover .line {
+.unit_wrapper.open .line {
     padding: 1px 5px 1px 5px;
     height: 20px;
-    transition-delay: 0s;
 }
 
 .unit_wrapper .line .name {
